<resources>
    <string name="app_name">Finite State Machine</string>
    <string name="title_door">Door</string>
    <string name="title_pacman">Pacman</string>
    <string name="title_gol">GamOfLife</string>
    <string name="title_android">Android</string>

    <string name="splash_screen_title">Welcome to Droidcon!</string>
    <string name="splash_screen_msg">I hope you\'re having fun and learn\nsome new stuff like using finite state machine\nto get your app flows under control.</string>
    <string name="btn_continue">Let\'s go</string>

    <string name="welcome_screen_title">Time to choose!</string>
    <string name="welcome_screen_msg">Existing users choose Login\nnew users choose Sign-up.</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign-up</string>

    <string name="login_screen_title">Please login!</string>
    <string name="username_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="authentication_error">Authentication failed. Please try again later.</string>

    <string name="app_ready_title">Here we go!</string>

    <string name="connecting">Connecting…</string>
    <string name="loading">Loading…</string>
    <string name="logging_in">Logging in…</string>
    <string name="initializing_1">Initializing…</string>
    <string name="initializing_2">Full throttle…</string>
    <string name="initializing_3">Still going…</string>
    <string name="initializing_4">Almost there…</string>
    <string name="screen_title">FSM to the rescue!</string>

    <string name="close">Close</string>

    <string name="offline_warn">You are offline!</string>
    <string name="offline_dialog_message">You are offline! Turn on data to have access to all awesome features.</string>
</resources>
