<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/airfox_background"
        android:fitsSystemWindows="true"
        android:padding="48dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/airfox_logo_alt_white"
            android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/btn_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_title"
            android:textSize="28sp"
            android:textColor="@color/airfox_white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
            android:id="@+id/tv_subtitle"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/splash_screen_msg"
            android:textSize="18sp"
            android:textColor="@color/airfox_white"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/btn_signup"
            android:visibility="invisible"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_signup"
            android:background="@color/airfox_dark"
            android:textColor="@color/airfox_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="24dp"/>

    <Button
            android:id="@+id/btn_login"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_login"
            android:background="@color/airfox_dark"
            android:textColor="@color/airfox_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"/>

    <Button
            android:id="@+id/btn_continue"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_continue"
            android:background="@color/airfox_dark"
            android:textColor="@color/airfox_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
